--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,10 @@
             <artifactId>spring-security-web</artifactId>
             <version>5.0.9.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
