--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,13 @@ spring.datasource.username=root
 spring.datasource.password=password
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+#Mail api
+mail.smtp.host={YOUR_SES_SMTP_HOST}
+mail.smtp.port={YOUR_SES_SMTP_PORT}
+mail.smtp.username={YOUR_SES_SMTP_USERNAME}
+mail.smtp.password={YOUR_SES_SMTP_PASSWORD}
+mail.from={YOUR_FROM_EMAIL}
+mail.from-name={YOUR_FROM_NAME}
+
+mail.verificationapi=http://localhost/verify-email?code=
