--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
 spring.datasource.url=jdbc:mysql://localhost:3306/testdb?useSSL=false
 spring.datasource.username=root
@@ -7,11 +7,11 @@ spring.datasource.password=password
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 #Mail api
-mail.smtp.host={YOUR_SES_SMTP_HOST}
-mail.smtp.port={YOUR_SES_SMTP_PORT}
-mail.smtp.username={YOUR_SES_SMTP_USERNAME}
-mail.smtp.password={YOUR_SES_SMTP_PASSWORD}
-mail.from={YOUR_FROM_EMAIL}
-mail.from-name={YOUR_FROM_NAME}
+mail.smtp.host=smtp.gmail.com
+mail.smtp.port=587
+mail.smtp.username=prakashdas1998.pd@gmail.com
+mail.smtp.password=Mitadas@123
+mail.from=prakashdas1998.pd@gmail.com
+mail.from-name=Prakash
 
 mail.verificationapi=http://localhost/verify-email?code=
