--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,15 @@
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
 spring.datasource.url=jdbc:mysql://localhost:3306/testdb?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=password
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 #Mail api
 mail.smtp.host=smtp.gmail.com
 mail.smtp.port=587
-mail.smtp.username=prakashdas1998.pd@gmail.com
-mail.smtp.password=Mitadas@123
+mail.smtp.username=
+mail.smtp.password=
 mail.from=prakashdas1998.pd@gmail.com
 mail.from-name=Prakash
 
