--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "add": "^2.0.6",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "jwt-decode": "^2.2.0",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.3.3",
     "yarn": "^1.12.3",
