--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
+    "parallax-js": "^3.1.0",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.3.3",
     "yarn": "^1.12.3",
