--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,11 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.1.10",
-    "@angular/cdk": "^7.0.2",
+    "@angular/cdk": "^7.1.1",
     "@angular/common": "^6.0.0",
     "@angular/compiler": "^6.0.0",
     "@angular/core": "^6.0.0",
+    "@angular/flex-layout": "^7.0.0-beta.19",
     "@angular/forms": "^6.0.0",
     "@angular/http": "^6.0.0",
     "@angular/material": "^7.0.2",
@@ -25,8 +26,10 @@
     "@fortawesome/angular-fontawesome": "^0.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.8",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@material-ui/icons": "^3.0.1",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "add": "^2.0.6",
+    "app": "^0.1.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
