--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,8 +29,10 @@
     "@material-ui/icons": "^3.0.1",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "add": "^2.0.6",
+    "angular-instantsearch": "^2.2.1",
     "app": "^0.1.0",
     "core-js": "^2.5.4",
+    "flex-layout": "^1.0.1",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
     "parallax-js": "^3.1.0",
@@ -59,6 +61,5 @@
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "~2.9.1"
-
   }
 }
