--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,8 @@
     "flex-layout": "^1.0.1",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
+    "ng2-file-upload": "^1.3.0",
+    "ng4-loading-spinner": "^1.2.3",
     "parallax-js": "^3.1.0",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.3.3",
