--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,7 @@ mail.from=prakashdas1998.pd@gmail.com
 mail.from-name=Prakash
 
 mail.verificationapi=http://localhost/verify-email?code=
+
+#Files upload
+spring.http.multipart.max-file-size=500KB
+spring.http.multipart.max-request-size=500KB
