--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,9 @@
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.config.json",
     "build": "ng build",
+    "postbuild": "npm run deploy",
+    "predeploy": "rimraf ../src/main/resources/static && mkdirp ../src/main/resources/static",
+    "deploy": "copyfiles -f dist/frontend/** ../src/main/resources/static",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -52,6 +55,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
+    "copyfiles": "^2.1.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
