--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ mail.verificationapi=http://localhost/verify-email?code=
 #Files upload
 spring.http.multipart.max-file-size=500KB
 spring.http.multipart.max-request-size=500KB
+
+management.security.enabled=false
